--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -56,6 +56,31 @@ body, html, #root {
 	padding: 3rem;
 }
 
+.py-1 {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+}
+
+.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+
+.py-3 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+}
+
+.py-4 {
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
+}
+
+.py-5 {
+	padding-top: 3rem;
+	padding-bottom: 3rem;
+}
+
 .w-100 {
 	width: 100%;
 }
