Добавлены новые поля в формы и улучшен функционал получения информации о пользователе. Обновлены стили и исправлены ошибки в коде.

--- a/frontend/src/components/UI/Table/MyTable.css
+++ b/frontend/src/components/UI/Table/MyTable.css
@@ -19,3 +19,11 @@ td {
 th {
   background-color: #f4f4f4;
 }
+
+.table-warning {
+  background-color: #f2e5c3;
+}
+
+.table-danger {
+  background-color: #f2c3c3;
+}
