Улучшены стили таблицы для предотвращения переноса текста. Обновлены заголовки столбцов для отображения почты. Обновлены формы для программ и ремонтов, добавлены новые поля и улучшена структура данных.

--- a/frontend/src/components/UI/Table/MyTable.css
+++ b/frontend/src/components/UI/Table/MyTable.css
@@ -14,7 +14,11 @@ td {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
+  width: fit-content;
+  min-width: 100px;
+  white-space: nowrap;
 }
+
 
 th {
   background-color: #f4f4f4;
