Удалены неиспользуемые конфигурационные файлы и бинарные файлы. Добавлен файл конфигурации для фронтенда и обновлен файл окружения. Обновлены миграции и исправлены отступы в коде.

--- a/frontend/src/components/UI/Table/MyTable.css
+++ b/frontend/src/components/UI/Table/MyTable.css
@@ -33,3 +33,9 @@ th {
 .table-danger {
   background-color: #f2c3c3;
 }
+
+.btn-danger {
+  background-color: #f2c3c3;
+  border-color: #f2c3c3;
+  color: dark;
+}
