Обновлены формы отчетов и обработка данных, добавлены новые функции для выбора моделей, улучшена обработка ошибок и обновлены стили для отключенных элементов.

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -285,3 +285,8 @@ button:hover {
 	justify-content: center;
 	position: relative;
 }
+
+.form-control.disabled {
+	background-color: #d7d7d7;
+	pointer-events: none !important;
+}
